--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -34,17 +34,12 @@ jobs:
           echo "SPOTIFY_CLIENT_SECRET is set? " ${{ secrets.SPOTIFY_CLIENT_SECRET != '' }}
           echo "SPOTIFY_REDIRECT_URI is set? " ${{ secrets.SPOTIFY_REDIRECT_URI != '' }}
 
-
       - name: Run the script
         env:
           SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
           SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
           SPOTIFY_REDIRECT_URI: ${{ secrets.SPOTIFY_REDIRECT_URI }}
-        run: |
-          echo "SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}"
-          echo "SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}"
-          echo "SPOTIFY_REDIRECT_URI=${SPOTIFY_REDIRECT_URI}"
-          python creator.py
+        run: python -u creator.py
 
       - name: Commit and push updated time.txt
         env:
