--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
+          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
           git checkout main
           git pull origin main
           git add time.txt
