--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -42,17 +42,11 @@ jobs:
         run: cat .cache | base64 > new_cache && mv new_cache .cache
 
 
-      - name: Commit and push updated time.txt
+      - name: Commit and push changes
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
-          git checkout main
-          git pull origin main
           git add time.txt
-          git commit -m "Update time.txt" || echo "No changes to commit"
-          git push origin main
-
-
+          git diff --cached --quiet || (git commit -m "Update time.txt" && git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git main)
